# Memory

my_reme/compress/: README.md  __init__.py  (+5 more)
my_reme/compress_reme/: .env.example  .gitignore  CALL_FLOW.md  CONFIG_GUIDE.md  GET_MESSAGES_DEMO.md  MESSAGE_FORMAT.md  MIGRATION.md  README.md  REFACTORING_COMPLETE.md  SESSION_DESIGN.md  STRUCTURE.md  __init__.py  __main__.py  config_example.py  example.py  pyproject.toml  reme_client.py  reme_server.py  requirements.txt  verify_structure.py  调研.md
my_reme/compress_reme/compress_reme/: __init__.py  __main__.py
my_reme/compress_reme/compress_reme/client/: __init__.py
my_reme/compress_reme/compress_reme/core/: __init__.py  models.py  session_manager.py  simple_token_counter.py
my_reme/compress_reme/compress_reme/server/: __init__.py  app.py
my_reme/compress_reme/docs/: PROJECT.md  QUICKSTART.md  README.md
my_reme/compress_reme/examples/: __init__.py  basic_usage.py  config_example.py
my_reme/compress_reme/scripts/: run_server.bat  run_server.sh
my_reme/compress_reme/session_memory/: .verification_report.md  CHAT_WITH_SESSION.md  CONFIG_SIMPLE_GUIDE.md  CONFIG_SIMPLIFICATION.md  DEBUG_TOOLS.md  FRONTEND_GUIDE.md  MODEL_HUB_CHANGELOG.md  SESSION_CONFIG_GUIDE.md  START_GUIDE.md  __init__.py  app.py  clean_sessions.sh  content_mapping_builder.py  debug_session.py  llm_rejection_checker.py  query_rewriter.py  requirements.txt  session_client.py  test_chat_session.py
my_reme/compress_reme/session_memory/config/: __init__.py  config.py  config.yml
my_reme/compress_reme/tests/: __init__.py  test_install.py
(+28 files in other folders)
